# MizTagger-pywin

./: README.md  context_menu.py  pyproject.toml  shared.py  view.bat  view.py
tagger/: context_menu.py  shared.py  view.py
